# text-to-sql-proactive-data-analyst-engine

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  setup_github.sh
.github/workflows/: ci.yml
apps/web/: Dockerfile  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/analysis/: route.integration.test.ts  route.test.ts  route.ts
apps/web/src/app/api/analysis/[id]/: route.ts
apps/web/src/app/api/mcp/tools/: route.ts
apps/web/src/lib/: analysis.test.ts  analysis.ts  config.test.ts  config.ts  db.ts  mcp.test.ts  mcp.ts  queue.ts
infra/db/: init.sql
scripts/: check_generated_artifacts.py  demo_flow.sh  run-web-integration.mjs
services/engine/: Dockerfile  pyproject.toml
services/engine/analyst_engine/: __init__.py  charting.py  config.py  db.py  main.py  planner.py  semantic_layer.py  validator.py  worker.py
services/engine/tests/: test_planner_validator.py  test_semantic_layer.py  test_worker.py
